Update Capstone Project link .html

--- a/Capstone Project link .html
+++ b/Capstone Project link .html
@@ -1,6 +1,7 @@
 
 
 ##  Git hub link to Capstone Project - Dashboard
+## Select the entire link, right-click, then select "Go to https://dataplatform.cloud.ibm.....
 
 
 
